<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/size_20"
    android:background="@drawable/rounded_white_bg"
    android:layout_marginStart="@dimen/size_16"
    android:layout_marginEnd="@dimen/size_16">
    <com.blazma.logistics.custom.CustomTextView
        android:id="@+id/txtDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="false"
        android:text="@string/msg_sure_no_sample"
        android:textAlignment="center"
        android:textColor="@color/colorTextGrayDark"
        android:textSize="@dimen/font_20"
        app:customFont="@string/Nuinito_Bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/size_30"/>
    <LinearLayout
        android:id="@+id/group_btns_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDescription"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/size_20">
        <com.blazma.logistics.custom.CustomMaterialButton
            android:id="@+id/btnYes"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/size_48"
            android:text="@string/yes"
            android:textColor="@color/colorWhite"
            android:background="@null"
            android:backgroundTint="@color/colorMainBgBlue"
            app:shapeAppearance="@style/LoginButton"
            style="?buttonStyle"
            />
        <LinearLayout
            android:id="@+id/view_middle2"
            android:layout_width="@dimen/size_30"
            android:layout_height="match_parent"
            android:orientation="horizontal"/>
        <com.blazma.logistics.custom.CustomMaterialButton
            android:id="@+id/btnNo"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/size_48"
            android:text="@string/no"
            android:textColor="@color/colorWhite"
            android:background="@null"
            android:backgroundTint="@color/colorRed"
            app:shapeAppearance="@style/LoginButton"
            style="?buttonStyle"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>