<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/bg_login_img" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingHorizontal="@dimen/size_25">
            <com.blazma.logistics.custom.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="@dimen/size_35"
                android:textColor="@color/colorMainTextBlue"
                android:layout_marginTop="@dimen/size_120"
                app:customFont="@string/Nuinito_Bold"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_33"
                android:orientation="vertical">
                <com.blazma.logistics.custom.CustomEditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_48"
                    android:paddingHorizontal="@dimen/size_25"
                    android:textSize="@dimen/font_13"
                    android:textColor="@color/colorTextGrayDark"
                    android:textColorHint="@color/colorTextGrayLight"
                    android:textAlignment="viewStart"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:hint="@string/mobile"
                    android:text=""
                    android:background="@drawable/rounded_shadow_bg"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_20"
                android:orientation="vertical">
                <com.blazma.logistics.custom.CustomEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_48"
                    android:paddingHorizontal="@dimen/size_25"
                    android:textSize="@dimen/font_13"
                    android:textColor="@color/colorTextGrayDark"
                    android:textColorHint="@color/colorTextGrayLight"
                    android:textAlignment="viewStart"
                    android:inputType="text"
                    android:singleLine="true"
                    android:hint="@string/password"
                    android:text=""
                    android:background="@drawable/rounded_shadow_bg"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_20"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <CheckBox
                    android:id="@+id/cbRemember"
                    android:checked="true"
                    android:buttonTint="@color/colorMainTextBlue"
                    android:layout_width="@dimen/size_25"
                    android:layout_height="@dimen/size_25"/>
                <com.blazma.logistics.custom.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/size_10"
                    android:text="@string/remember_me"
                    android:textSize="@dimen/font_12"
                    android:textColor="@color/colorMainTextBlue"
                    app:customFont="@string/Nuinito_Bold"/>
            </LinearLayout>
            <com.blazma.logistics.custom.CustomMaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_48"
                android:layout_marginTop="@dimen/size_20"
                android:text="@string/upper_login"
                android:textColor="@color/colorWhite"
                android:background="@null"
                android:backgroundTint="@color/colorMainTextBlue"
                app:shapeAppearance="@style/LoginButton"
                style="?buttonStyle"
                />
        </LinearLayout>
    </RelativeLayout>
</layout>