<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/size_40"
        android:layout_marginHorizontal="@dimen/size_16">
        <LinearLayout
            android:id="@+id/view_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <include android:visibility="gone" android:id="@+id/btnBack" layout="@layout/view_back_button" />
            <com.blazma.logistics.custom.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_10"
                android:text="@string/task_status"
                android:textColor="@color/colorMainTextBlue"
                android:textSize="@dimen/font_14"
                app:customFont="@string/Nuinito_Bold" />
        </LinearLayout>
        <ImageView
            android:id="@+id/imageChecked"
            android:layout_width="190dp"
            android:layout_height="190dp"
            android:src="@drawable/ic_big_green_checked"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_top"
            android:layout_marginTop="70dp"/>
        <com.blazma.logistics.custom.CustomTextView
            android:id="@+id/txtDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_10"
            android:text="@string/samples_added_to_container"
            android:textColor="@color/colorTextGrayDark"
            android:textAlignment="viewStart"
            android:textSize="@dimen/font_24"
            app:customFont="@string/Nuinito_Bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageChecked"
            android:layout_marginTop="@dimen/size_40"
            android:paddingHorizontal="@dimen/size_20"/>

        <com.blazma.logistics.custom.CustomMaterialButton
            android:id="@+id/btnDone"
            android:layout_width="200dp"
            android:layout_height="@dimen/size_48"
            android:text="@string/done"
            android:textColor="@color/colorWhite"
            android:background="@null"
            android:backgroundTint="@color/colorMainBgBlue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/size_30"
            app:shapeAppearance="@style/LoginButton"
            style="?buttonStyle"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>